# fl-studio-mcp

./: .env.example  .gitignore  API_REFERENCE.md  CHANGELOG.md  DISTRIBUTION_GUIDE.md  Dockerfile  LICENSE  PROJECT_SUMMARY.md  README.md  WORKFLOWS.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
fl_studio_scripts/fl_mcp_bridge/: device_fl_mcp_bridge.py  name.py
fl_studio_scripts/stubs/: channels.pyi  device.pyi  general.pyi  mixer.pyi  patterns.pyi  playlist.pyi  transport.pyi  ui.pyi
skills/fl-studio-mcp/: SKILL.md
src/fl_studio_mcp/: __init__.py  __main__.py  bridge.py  cli.py  errors.py  installer.py  models.py  presets.py  prompts.py  protocol.py  resources.py  server.py  theory.py
src/fl_studio_mcp/automation/: __init__.py  base.py  macos.py  windows.py
src/fl_studio_mcp/tools/: __init__.py  algorithmic.py  arrangement_builder.py  arrangement_mutator.py  arranger.py  audio_ai.py  audio_extraction.py  audio_harmonizer.py  channels.py  chord_voicer.py  collaboration.py  composition.py  connection.py  creative_fx.py  custom_ui.py  dsp.py  euclidean_drums.py  film_scoring.py  foley_designer.py  gain_staging.py  generative_vocals.py  genre_fusion.py  glitch_generator.py  gui_automation.py  hardware.py  hardware_midi.py  harmonic_synth.py  humanization.py  install_bridge.py  latency.py  library.py  live_looping.py  lofi_fx.py  lyric_video.py  master_bus.py  (+52 more)
tests/: conftest.py  test_agentic_producer.py  test_algorithmic.py  test_automation.py  test_bidirectional.py  test_bridge.py  test_cli.py  test_mixing.py  test_models.py  test_pattern_list.py  test_presets.py  test_qa_adversarial.py  test_sprint10.py  test_sprint11.py  test_sprint12.py  test_sprint13.py  test_sprint14.py  test_sprint15.py  test_sprint16.py  test_sprint3.py  test_sprint4.py  test_sprint5.py  test_sprint6.py  test_sprint7.py  test_sprint8.py  test_sprint9.py  test_tools.py  test_v2_features.py  test_websocket_transport.py  test_windows_transport_automation.py
(+5 files in other folders)
