[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl-studio-mcp"
version = "0.1.0"
description = "MCP server — control FL Studio via MIDI from Claude or any MCP client"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.9.0",
    "mido>=1.3.3",
    "python-rtmidi>=1.5.8",
    "pydantic>=2.7.0",
]

[project.scripts]
fl-studio-mcp = "fl_studio_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fl_studio_mcp"]

[tool.hatch.envs.default]
dependencies = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
